--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:watch": "npm test -- --watch",
     "dev": "webpack --mode development",
     "build": "webpack --mode production"
   },
@@ -38,7 +39,7 @@
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-react": "^7.7.0",
-    "fetch-mock": "5.13.1",
+    "fetch-mock": "^5.13.1",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "redux-devtools": "^3.4.1",
